--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: WALLSEC IT SECURITY
+email: contact@wallsec.de
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  We are a consulting company based in Walldorf, Germany, helping
+  customers run secure and compliant operations. We focus on SAP on-premise
+  products and SAP Cloud services and strive to provide the best service to our customers.
+baseurl: ""
+url: "ws-int.gihub.io"
+twitter_username: wallsec_de
+github_username:  wallsec
 
 # Build settings
 theme: minima
