--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: WALLSEC IT SECURITY
+title: WALLSEC - BLOG
 email: contact@wallsec.de
 description: >- # this means to ignore newlines until "baseurl:"
   We are a consulting company based in Walldorf, Germany, helping
